<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityDataFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    android:gravity="center"

    tools:context=".settingsfragments.ActivityDataFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_activity_data_title"
        android:textSize="26sp"
        android:gravity="center"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="12dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        android:layout_margin="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_activity_data_i_go"
                android:textSize="20sp"/>

            <RadioGroup
                android:id="@+id/palRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <RadioButton
                    android:id="@+id/palSitAndLieRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/fragment_activity_data_text_1"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <RadioButton
                    android:id="@+id/palSitAndLessActRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_activity_data_text_2"
                    android:textSize="18sp"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <RadioButton
                    android:id="@+id/palSitAndMoreActRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/fragment_activity_data_text_3"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <RadioButton
                    android:id="@+id/palWalkAndStayRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/fragment_activity_data_text_4"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <RadioButton
                    android:id="@+id/palHardWorkRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/fragment_activity_data_text_5"
                    />
            </RadioGroup>







        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/activityDataFNextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:background="@drawable/round_btn"
        android:text="@string/next_button_text"/>

</LinearLayout>