<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/personalDataFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"

    tools:context=".settingsfragments.PersonalDataFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_personal_data_title"
        android:textSize="26sp"
        android:gravity="center"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="12dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        android:layout_margin="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_personal_data_gender"
                android:textSize="20sp"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <RadioButton
                    android:id="@+id/wRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/fragment_personal_data_woman"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/mRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/fragment_personal_data_man"
                    />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/fragment_personal_data_bodysize_in_unit"
                android:textSize="20sp"
                />


            <EditText
                android:id="@+id/bodySizeEditText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="190"
                android:maxLength="3"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/bodySizeLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bodySizeFeetET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="feet"
                    android:maxLength="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>

                <EditText
                    android:id="@+id/bodySizeInchesET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="inches"
                    android:maxLength="2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"/>
            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/fragment_personal_data_weight_in_unit"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/weightEditText"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:hint="@string/fragment_personal_data_weight_hint"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/fragment_personal_data_age"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/ageEditText"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:hint="23"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/privacyPoliceTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_personal_data_show_privacy_police"
        android:textColor="#0000FF"
        android:textColorHighlight="#FF0000"
        android:textSize="20dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/personalDataFNextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:background="@drawable/round_btn"
        android:text="@string/next_button_text"/>

</LinearLayout>