<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#4802F62A">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sportentry_dialog_typeofsport"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/sportEntryDialogLabelACTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/sportentry_dialog_jogging"
            android:layout_gravity="center"
            android:textAlignment="center"

            android:textColor="#000000"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sportentry_dialog_calories_burnt"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textStyle="bold" />



        <EditText
            android:id="@+id/sportEntryDialogKcalEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="137"
            android:inputType="number"
            android:maxLength="4"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textStyle="bold" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/cancelNewSportEntryDialogButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#4D1EAF24"
            android:text="@string/cancel_button_text"
            android:textStyle="bold" />


        <Button
            android:id="@+id/addNewSportEntryDialogButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#4D1EAF24"

            android:text="@string/add_button_text"
            android:textStyle="bold" />

    </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>
