<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#77FFE500">



                <TextView
                    android:id="@+id/deleteItemDialogMessageTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/delete_item_layout_messagetext"
                    android:textColor="#000000"
                    android:textStyle="bold" />





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/deleteItemDialogCancelButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3BFF8D00"
                    android:text="@string/cancel_button_text"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/deleteItemDialogDeleteButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3BFF8D00"

                    android:text="@string/delete_button_text"
                    android:textStyle="bold" />

            </LinearLayout>






        </LinearLayout>


    </androidx.cardview.widget.CardView>



</LinearLayout>
