<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:isScrollContainer="true"
    android:background="@drawable/gradient_bg"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".StartActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aladin"
        android:gravity="center"
        android:text="@string/activity_start_title"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_weight="1"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="15dp"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/aladin"
                android:padding="20sp"
                android:text="@string/activity_start_cardview"
                android:textAlignment="center"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/startButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/round_btn"
            android:fontFamily="@font/archivo_black"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/activity_start_button"
            android:textColor="@color/startColor"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>





</LinearLayout>
</ScrollView>